ADD:factory_infos router
