# docs/swagger.json
@@ -15,7 +15,7 @@
         },
         "version": "1.0"
     },
-    "host": "bf.shoggothy.xyz",
+    "host": "bfd.shoggothy.xyz",
     "basePath": "/",
     "paths": {
         "/dr/factory": {
@@ -57,9 +57,9 @@
                 }
             }
         },
-        "/dr/factory/infos/{id}": {
-            "get": {
-                "description": "根据场站ID获取场站具体信息",
+        "/dr/factory/infos": {
+            "post": {
+                "description": "传入场站名字和距离获取场站具体信息",
                 "consumes": [
                     "application/json"
                 ],
@@ -72,18 +72,20 @@
                 "summary": "场站详情",
                 "parameters": [
                     {
-                        "type": "integer",
-                        "description": "场站ID",
-                        "name": "id",
-                        "in": "path",
-                        "required": true
+                        "description": "对应场站的名字和距离",
+                        "name": "distance_info",
+                        "in": "body",
+                        "required": true,
+                        "schema": {
+                            "$ref": "#/definitions/response.FactoryDistanceInfo"
+                        }
                     }
                 ],
                 "responses": {
                     "200": {
                         "description": "OK",
                         "schema": {
-                            "$ref": "#/definitions/response.FactoryInfoResponse"
+                            "$ref": "#/definitions/response.FactoryDetailResponse"
                         }
                     },
                     "400": {
@@ -1303,6 +1305,9 @@
                     "description": "售货机编号",
                     "type": "integer"
                 },
+                "driver_id": {
+                    "type": "integer"
+                },
                 "factory_id": {
                     "type": "integer"
                 },
@@ -1554,6 +1559,9 @@
                 },
                 "deleted_at": {
                     "description": "注销选项\tGORM.",
+                    "type": "string"
+                },
+                "description": {
                     "type": "string"
                 },
                 "id": {
@@ -2143,6 +2151,54 @@
                 }
             }
         },
+        "response.FactoryDetail": {
+            "type": "object",
+            "properties": {
+                "address": {
+                    "type": "string"
+                },
+                "description": {
+                    "type": "string"
+                },
+                "name": {
+                    "type": "string"
+                }
+            }
+        },
+        "response.FactoryDetailResponse": {
+            "type": "object",
+            "properties": {
+                "code": {
+                    "type": "integer"
+                },
+                "distance_info": {
+                    "$ref": "#/definitions/response.FactoryDistanceInfo"
+                },
+                "factory_detail": {
+                    "$ref": "#/definitions/response.FactoryDetail"
+                },
+                "msg": {
+                    "type": "string"
+                },
+                "product_details": {
+                    "type": "array",
+                    "items": {
+                        "$ref": "#/definitions/response.FactoryProductDetail"
+                    }
+                }
+            }
+        },
+        "response.FactoryDistanceInfo": {
+            "type": "object",
+            "properties": {
+                "distance": {
+                    "type": "string"
+                },
+                "factory_name": {
+                    "type": "string"
+                }
+            }
+        },
         "response.FactoryGoodsResponse": {
             "type": "object",
             "properties": {
@@ -2221,7 +2277,7 @@
                     "description": "//场站经纬度\nLontitude float64 `json:\"lontitude\"`\nLatitude  float64 `json:\"latitude\"`\n场站名",
                     "type": "string"
                 },
-                "productViews": {
+                "product_views": {
                     "type": "array",
                     "items": {
                         "$ref": "#/definitions/response.FactoryProductOverview"
@@ -2235,13 +2291,39 @@
                 "code": {
                     "type": "integer"
                 },
-                "factoryInfos": {
+                "factory_infos": {
                     "type": "array",
                     "items": {
                         "$ref": "#/definitions/response.FactoryInfo"
                     }
                 },
                 "msg": {
+                    "type": "string"
+                }
+            }
+        },
+        "response.FactoryProductDetail": {
+            "type": "object",
+            "properties": {
+                "inventory": {
+                    "type": "integer"
+                },
+                "m_inventory": {
+                    "type": "integer"
+                },
+                "monthly_sales": {
+                    "type": "integer"
+                },
+                "name": {
+                    "type": "string"
+                },
+                "pic": {
+                    "type": "string"
+                },
+                "supply_price": {
+                    "type": "number"
+                },
+                "type": {
                     "type": "string"
                 }
             }
